# formhe

./: .gitignore  LICENSE  README.md  pyproject.toml  results.xlsx  run_all.sh  run_all_parallel.sh  run_no_llm.sh  run_subset.sh  run_with_default_llms.sh  subset.instances
analysis/: analysis.R  analysis_cat.R  analysis_common.R  analysis_paper.R  bigrams.csv  metrics_analysis.ipynb  metrics_analysis.py  notion.csv  notion2.csv  plots.R  prog_analysis.R  prog_analysis.csv  prog_analysis2.csv
buggy_instances/: 1819_1  1819_2  1920_1.lp  1920_2  1920_2_2  2021_1  2021_2  toy_example.lp  toy_example_.lp
datasets/: dataset_2.feather
docs/: ideas.md
examples/: 15puzzle.lp  blocks.lp  connected.lp  exam_1920_1.lp  exam_1920_1_.lp  exam_1920_1_instance.lp  exam_1920_2.lp  exam_2122.lp  graph_coloring.lp  hanoi.lp  houses.lp  locking.lp  mythological.lp  nqueens.lp  shortest_path.lp  sitting.lp  toy_example.lp  tsp.lp  vertex_cover.lp  xkcd_food.lp
formhe/: asp_bug_finder.py  asp_bug_finder_baseline.py  asp_completer.py  asp_integrated.py  asp_integrated_sygus.py  bento-manager.py  bento-server.py  bento_manager.py  bento_server.py  playground.py
helper_scripts/: b64.py  buggy_correct_matcher.py  clingo.py  dataset_3.feather  dataset_gen.py  evaluate.py  evaluate_baseline.py  infer.ipynb  mutation_n_calculator.py  mutator.py  playground.ipynb  prog_analysis.py  prog_analysis2.py  prompt_generator.py  train.ipynb  train.py  train_gen.py
problems/: A.yaml  B.yaml  C.yaml  D.yaml  E.yaml
prompts/: A_1_1.txt  A_3_1.txt  A_3_2.txt  A_4_1.txt  A_4_2.txt  A_4_3.txt  A_4_4.txt  A_4_5.txt  A_4_6.txt  A_4_7.txt  A_6_2.txt  A_6_3.txt  A_7_1.txt  A_8_1.txt  A_8_2.txt  A_8_3.txt  A_8_4.txt  B_4_1.txt  B_4_2.txt  B_8_1.txt  C_1_1.txt  C_1_2.txt  C_1_3.txt  C_1_4.txt  C_1_5.txt  D_1_1.txt  D_1_2.txt  D_1_3.txt  D_1_4.txt  D_1_5.txt  D_1_6.txt  D_1_7.txt  D_2_1.txt  D_4_1.txt  D_4_2.txt  D_4_3.txt  D_4_4.txt  D_4_5.txt  D_5_1.txt  D_7_1.txt  (+7 more)
source/: conf.py  index.rst
(+2130 files in other folders)
