[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formhe"
version = "1.0.0"
authors = [
  { name="Ricardo Brancas", email="ricardo.brancas@tecnico.ulisboa.pt" },
]
description = "A Formula Helper for easing the development of logic programs"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "clingo~=5.6.2",
  "clingox~=1.2",
  "ordered-set",
  "tqdm",
  "argparse-dataclass",
  "z3-solver~=4.11.2",
  "pandas",
  "runhelper",
  "multiset",
  "scipy",
  "bentoml",
  "func_timeout",
  "dataclass-wizard",
  "requests"
]